# quest-engine

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  _config.yml  index.html  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish.yml  test.yml
campaigns/nexus/: __init__.py  story.py
engine/: __init__.py  analytics.py  campaign.py  challenge.py  challenges.py  engine.py  main.py  skill_pack.py  storage.py  storage_postgres.py  ui.py  updater.py  zone.py
engine/web/: __init__.py  auth.py  daily_quests.py  dialogue.py  email.py  gear.py  gemini_image.py  google_auth.py  hub.py  images.py  markup.py  narrative.py  notifications.py  rosters.py  server.py  state.py  trellis_3d.py  tts.py  tts_elevenlabs.py
engine/web/static/: app.js  illustrations.js  manifest.json  overworld.js  platformer.js  sounds.js  sw.js  themes.css
engine/web/templates/: 404.html  _platform_nav.html  achievements.html  admin_analytics.html  admin_signups.html  auth.html  avatar_3d.html  avatar_gallery.html  base.html  bookmarks.html  browse.html  challenge.html  character_create.html  character_sheet.html  complete.html  daily.html  explore.html  hub.html  landing.html  leaderboard.html  level.html  menu.html  onboarding.html  parent.html  pick_course.html  preferences.html  profile.html  quest_log.html  review.html  settings.html  spaced_review.html  stats.html  welcome.html  zone_complete.html  zone_intro.html
scripts/: generate_assets.py
skill-packs/bash/: __init__.py  story.py  zones.py
skill-packs/docker/: __init__.py  story.py  zones.py
skill-packs/git/: __init__.py  story.py  zones.py
skill-packs/postgres/: __init__.py  story.py  zones.py
skill-packs/ssh/: __init__.py  story.py  zones.py
skill-packs/vim/: __init__.py  story.py  zones.py
tests/: conftest.py  test_edge_cases.py  test_engine.py  test_session.py  test_web.py
