[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quest-engine"
version = "2.0.0"
description = "The gold standard educational game engine — terminal + web RPG framework with 3 themes, 12+ page types, PWA, sounds, adaptive difficulty, and pluggable storage."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "thorski1" }]
keywords = ["terminal", "game", "rpg", "learning", "education", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Education",
    "Topic :: Terminals",
]
dependencies = ["rich>=13.0.0"]

[project.optional-dependencies]
analytics = ["posthog>=3.0.0"]
postgres = ["psycopg2-binary>=2.9.0"]
web = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "jinja2>=3.0.0",
    "python-multipart>=0.0.6",
]

[project.urls]
Homepage      = "https://github.com/thorski1/quest-engine"
Repository    = "https://github.com/thorski1/quest-engine"
"Bug Tracker" = "https://github.com/thorski1/quest-engine/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["engine*"]

[tool.setuptools.package-data]
engine = [
    "web/templates/*.html",
    "web/static/*.css",
    "web/static/*.js",
    "web/static/*.json",
    "web/static/*.png",
]
